fix to-top-button visibility

--- a/src/app/shared/to-top-button/to-top-button.component.scss
+++ b/src/app/shared/to-top-button/to-top-button.component.scss
@@ -1,8 +1,19 @@
 @import 'abstracts/variables';
 
+
+:host {
+    display: inline-block;
+}
+
 button {
     width: 25px;
     height: 25px;
     color: $grey;
     font-size: 25px;
+    transition: opacity 1s;
+    opacity: 0;
+
+    &.show {
+        opacity: 1;
+    }
 }
