--- a/src/app/workshops/workshops-feed/workshops-feed.component.scss
+++ b/src/app/workshops/workshops-feed/workshops-feed.component.scss
@@ -4,6 +4,7 @@
 
 .workshop-feed-content {
     @include flex(column, space-around, center);
+    min-height: 84vh;
 }
 
 app-article {
@@ -22,8 +23,8 @@ app-article {
 .tag-group {
     position: fixed;
     top: 80px;
-    right: 30px;
-    width: 150px;
+    right: 20px;
+    width: 140px;
 
     @include mq($until: small) {
         display: none;
@@ -33,8 +34,8 @@ app-article {
 .categories {
     position: fixed;
     top: 80px;
-    left: 110px;
-    width: 150px;
+    left: 90px;
+    width: 140px;
 
     @include mq($until: small) {
         display: none;
